<resources>
    <string name="app_name">AutoClickerReplay</string>
    <string name="service_simulate_auto_click">AutoClickerTouchService</string>
    <string name="service_simulate_auto_click_description">Сервис для симуляции клика на указанных точках</string> <!--TODO:write description-->
    <string name="description_overlay_permission">
        Разрешите пожалуйста нашему приложению отображаться по верх других приложений, это нужно
        для работы приложения, приложение не как не пользуется уязвимостями и не использует данное
        разрешение для получения ваших данных.
    </string>

    <string name="accessibility_service_description">
        Так же пожалуйста добавьте наше приложение в сервисы специальных возможностей, это позволит
        приложению имитировать нажатие на экран без рут прав. Приложение не как не пользуется данной
        возможностью в вредоносных целях.
    </string>
    <string name="untitled">untitled</string>
    <string name="allow_permission">Разрешить</string>
    <string name="add_service_accessibility">Добавить</string>
    <string name="setting_macro">Настройки сценария</string>
    <string name="setting_point">Настройки цели</string>
    <string name="save">Сохранить</string>
    <string name="save_script">Сохранить сценарий</string>
    <string name="title_save_script">Введите название файла</string>
    <string name="load_script">Загрузить сценарий</string>
    <string name="sel_type_goal">Загрузить сценарий</string>
    <string name="delete">Удалить</string>
    <string name="duplicate">Дублировать</string>
    <string name="swap">Инвертировать</string>
    <string name="ms">мс</string>
    <string name="times">раз</string>
    <string name="disconnect_error">Ошибка соединения</string>

    <string name="title_repeat_preference_point">Количество повторений(мин. 1 раз)</string>
    <string name="title_delay_preference_point">Задержка перед нажатием</string>
    <string name="title_duration_preference_point">Продолжительность нажатия(мин. 1 мс)</string>
    <string name="title_direction_preference_point">Направеление</string>

    <string name="title_repeat_preference">Количество повторений(-1 бесконечно)</string>
    <string name="summary_repeat_preference">(-1 бесконечно)</string>
    <string name="key_preference_repeat">repeat</string>

    <string name="title_size_point_preference">Размер целей</string>
    <string name="summary_size_point_preference">Выберите размер цели</string>
    <string name="key_preference_size_point">size_point</string>

    <string name="title_size_control_panel_preference">Размер панили управления</string>
    <string name="summary_size_control_panel_preference">Выберите размер панели управления</string>
    <string name="key_preference_size_control_panel">size_control_panel</string>


    <string name="title_bounds_preference">Вкл. границы для целей</string>
    <string name="key_preference_bounds_on">bounds_on</string>

    <string name="toast_empty_script">В сценарии ничего нету</string>
    <string name="toast_havent_saved_script">Нет сохраненных сценариев</string>

    <string name="multi_points_creat_number">Введите количество одновременных нажатий(мин. 2 нажатия)</string>
    <string name="multi_points_click">нажатий</string>

    <string name="direction_title">Рекомендуем ознакомиться!!!</string>
    <string name="direction_first">После запуска AutoClick настройте под себя программу, нажав на шестеренку слева в панели управления.</string>
    <string name="direction_second">Чтобы добавить цель клика, нажмите на плюс в панели управления.
        В приложении есть возможность добавить swipe и pinch.
        Для этого нажмите и удерживайте плюс в панели управления.</string>
    <string name="direction_third">После добавления цели клика, можно изменить его свойства.
        Для этого нажмите и удерживайте цель клика.</string>
    <string name="cancel">Отмена</string>
    <string name="setting">Настройки</string>

    <string name="turn_off_ad">Отключить рекламу</string>

    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">—</string>
    <string name="delete_multi_point">Удалить мулти поинт</string>

    <string name="Interstitial_Unit_Ad_ID" translatable="false">ca-app-pub-8943838769488807/5167779275</string>
    <string name="Banner_in_Setting_Unit_Ad_ID" translatable="false">ca-app-pub-8943838769488807/9648189572</string>
    <string name="YandexMetricId" translatable="false">214d573b-889c-44da-b954-cd5bf8a1ed67</string>


    <string name="id_sku_turn_off_ad" translatable="false">turn_off_ad</string>
    <string name="pop_up_info">Пожалуйста дайте разрешение на отображение всплывающие окон, когда приложение запущено в фоне. Перейдите в Настройки->Приложения->Разрешения->Другие разрешения->Найдите там AutoClickerReplay. Выдайте разрешение "Отображать вспывающие окна, когда запущено в фоновом режиме."</string>
    <string name="ok">Ок</string>
    <string name="error_pop_up">Ошибка разрешения</string>
    <string name="error_listcomand_null">Сценарий пуст</string>
    <string name="there_is">Есть</string>
    <string name="no">Нету</string>
    <string name="numberPoint">№</string>
    <string name="xPoint" translatable="false">X</string>
    <string name="yPoint" translatable="false">Y</string>
    <string name="delay">Задержка</string>
    <string name="duration">Удерж.</string>
    <string name="repeat">Повтор.</string>
    <string name="pointType">Тип</string>
    <string name="feature">Особенность</string>
    <string name="setting_points">"Настройка сценария"</string>
    <string name="direction">Направление:</string>
    <string name="numbPoints">Количество поинтов:</string>
    <string name="key_preference_timer_on" translatable="false">timer_on</string>
    <string name="question_timer">Вкл. таймер</string>
    <string name="hide_share_button">Cкрыть кнопку поделится</string>
    <string name="key_preference_share_button_on" translatable="false">share_button_on</string>
    <string name="link_app_play_market" translatable="false">https://play.google.com/store/apps/details?id=com.askerweb.autoclickerreplay</string>
    <string name="random_point">Рандомизировать клики поинтов</string>
    <string name="key_preference_radomize_point_on" translatable="false">randomize_on</string>
</resources>
