<?xml version="1.0" encoding="utf-8"?>
<TableRow android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dip"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/selectClass"
        android:layout_column="1"
        android:layout_gravity="center"
        android:text="@string/pointType" />

    <TextView
        android:id="@+id/xPoint"
        android:layout_column="2"
        android:layout_gravity="center"
        android:text="X" />

    <TextView
        android:id="@+id/yPoint"
        android:layout_column="3"
        android:layout_gravity="center"
        android:text="Y" />

    <TextView
        android:id="@+id/delayPoint"
        android:layout_column="4"
        android:layout_gravity="center"
        android:text="@string/delay" />

    <TextView
        android:id="@+id/durationPoint"
        android:layout_column="5"
        android:layout_gravity="center"
        android:text="@string/duration"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"/>

    <TextView
        android:id="@+id/repeatPoint"
        android:layout_column="6"
        android:layout_gravity="center"
        android:text="@string/repeat" />
</TableRow>