<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/multiPointLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_marginTop="4dp"
        android:minWidth="10dp"
        android:minHeight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:text="@string/multi_points_creat_number" />


        <EditText
            android:id="@+id/editNumbMultiPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="1dp"
            android:ems="10"
            android:inputType="number"
            android:text="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editNumbMultiPoint"
            android:layout_alignEnd="@id/editNumbMultiPoint"
            android:layout_marginEnd="8dp"
            android:gravity="bottom|end"
            android:text="@string/multi_points_click" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/multiPointDialogButtonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus" />

        <Button
            android:id="@+id/multiPointDialogButtonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:text="@string/title_delay_preference_point" />

        <EditText
            android:id="@+id/editDelay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editDelay"
            android:layout_alignEnd="@id/editDelay"
            android:layout_marginEnd="8dp"
            android:gravity="bottom|end"
            android:text="@string/ms" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:text="@string/title_duration_preference_point" />

        <EditText
            android:id="@+id/editDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editDuration"
            android:layout_alignEnd="@id/editDuration"
            android:layout_marginEnd="8dp"
            android:gravity="bottom|end"
            android:text="@string/ms" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:text="@string/title_repeat_preference_point" />

        <EditText
            android:id="@+id/editRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editRepeat"
            android:layout_alignEnd="@id/editRepeat"
            android:layout_marginEnd="8dp"
            android:gravity="bottom|end"
            android:text="@string/times" />

    </RelativeLayout>

</LinearLayout>